// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verdocs-quick-filter renders with default props (with options) 1`] = `
<verdocs-quick-filter value="" style="min-width: 40px; display: inline-block;">
  <div class="control">
    <div class="title">
      <span class="prefix">
        Filter:
      </span>
      Select...
    </div>
    <div style="flex: 1;"></div>
    <div class="separator"></div>
    <div aria-label="Open Menu" class="arrow">
      <svg aria-hidden="true" class="css-8mmkcg" focusable="false" height="20" viewBox="0 0 20 20" width="20">
        <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
      </svg>
    </div>
  </div>
  <div aria-hidden="" class="items" style="min-width: 40px; position: absolute; left: 0; top: 0; margin: 0;">
    <button class="option">
      Option 1
    </button>
    <button class="option" disabled="">
      Option 2
    </button>
  </div>
</verdocs-quick-filter>
`;

exports[`verdocs-quick-filter renders with options and value 1`] = `
<verdocs-quick-filter value="1" style="min-width: 40px; display: inline-block;">
  <div class="control">
    <div class="title">
      <span class="prefix">
        Filter:
      </span>
      Option 1
    </div>
    <div style="flex: 1;"></div>
    <div class="separator"></div>
    <div aria-label="Open Menu" class="arrow">
      <svg aria-hidden="true" class="css-8mmkcg" focusable="false" height="20" viewBox="0 0 20 20" width="20">
        <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
      </svg>
    </div>
  </div>
  <div aria-hidden="" class="items" style="min-width: 40px; position: absolute; left: 0; top: 0; margin: 0;">
    <button class="option selected">
      Option 1
    </button>
    <button class="option" disabled="">
      Option 2
    </button>
  </div>
</verdocs-quick-filter>
`;
